# django-vue

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  readme.md
social_network_backend/: .gitignore  README.md  makefile  manage.py  pyproject.toml  requirements.txt
social_network_backend/account/: api.py  forms.py  models.py  serializers.py  urls.py
social_network_backend/account/migrations/: 0001_initial.py  0002_alter_user_name.py  0003_alter_user_managers.py  0004_auto_20231225_1302.py  0005_user_friends_count.py  0006_friendrequest_rejection_count.py  0007_user_posts_count.py
social_network_backend/chat/: api.py  serializers.py  urls.py
social_network_backend/chat/migrations/: 0001_initial.py
social_network_backend/code/: manage.py
social_network_backend/code/account/: api.py  apps.py  models.py  serializers.py
social_network_backend/code/chat/: api.py  apps.py  models.py  serializers.py
social_network_backend/code/post/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py
social_network_backend/code/scripts/: trends_controller.py
social_network_backend/code/search/: api.py  apps.py
social_network_backend/code/social_network_backend/: urls.py  wsgi.py
social_network_backend/post/: api.py  models.py  serializers.py  urls.py
social_network_backend/post/migrations/: 0001_initial.py  (+7 more)
social_network_backend/scripts/: trends_controller.py
social_network_backend/search/: api.py  urls.py
social_network_backend/social_network_backend/: .env  asgi.py  settings.py  urls.py
social_network_backend/utils/: constant.py
(+59 files in other folders)
