[tool.poetry]
name = "social_network_backend"
version = "0.1.0"
description = "Social Network Web Application"
authors = ["xenn <rishi734438@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.24"
django-cors-headers = "3.7.0"
django-environ = "0.11.2"
django-filter = "23.2"
django-storages = "1.13.2"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.2.2"
Pillow = "10.2.0"
pre-commit = "3.3.3"
psycopg2 = "2.9.7"
urllib3 = "^2.2.2"
chardet = "^5.2.0"
idna = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
